Fix background and spacing for Video Spotlight (#110)
* Fix background and spacing

* Correct property

* Fix margin and create storybook option

* Insert comma

--- a/src/components/grid-aware/VideoSpotlightBlock/VideoSpotlightBlock.module.css
+++ b/src/components/grid-aware/VideoSpotlightBlock/VideoSpotlightBlock.module.css
@@ -2,8 +2,12 @@
   display: grid;
   grid-template-columns: 1fr minmax(var(--grid-content-min-width), var(--grid-content-max-width)) 1fr;
   grid-template-rows: 465px;
-  margin: auto;
+  margin: 0 auto 42px;
   max-width: var(--grid-bleed-max-width);
+}
+
+.blackBackground {
+  background-color: var(--color-black);
 }
 
 .bleedMainContent {
